- Example entities and payment screens

--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -26,7 +26,8 @@
 
                 <TextView
                     android:id="@+id/tv_title_toolbar"
-                    style="@style/TextBase.White"
+                    style="@style/TextBase"
+                    android:textColor="@color/purple"
                     android:textSize="18sp" />
 
 
