--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,5 +11,6 @@
     <color name="green_light">#D6E4A1</color>
     <color name="purple">#5A366C</color>
     <color name="purple_light">#B7A0BF</color>
+    <color name="purple_dark">#432850</color>
 
 </resources>
