--- a/app/src/main/res/layout/row_news.xml
+++ b/app/src/main/res/layout/row_news.xml
@@ -18,7 +18,7 @@
 
 
             <ImageView
-                android:id="@+id/img_entity"
+                android:id="@+id/img_news"
                 android:layout_width="80dp"
                 android:layout_height="80dp"
                 android:scaleType="centerCrop"
@@ -29,10 +29,10 @@
                 android:alpha="1"/>
 
             <TextView
-                android:id="@+id/tv_entity_name"
+                android:id="@+id/tv_news_title"
                 style="@style/TextBase"
                 android:textColor="#000"
-                android:layout_toRightOf="@+id/img_entity"
+                android:layout_toRightOf="@+id/img_news"
                 android:layout_toLeftOf="@+id/img_starred"
                 android:textSize="22sp"
                 android:maxLines="1"
@@ -40,32 +40,24 @@
                 android:layout_marginRight="5dp"/>
 
             <TextView
-                android:id="@+id/tv_entity_category"
+                android:id="@+id/tv_news_summary"
                 style="@style/TextBase"
-                android:layout_alignLeft="@+id/tv_entity_name"
-                android:layout_alignRight="@+id/tv_entity_name"
-                android:layout_below="@+id/tv_entity_name"
+                android:layout_alignLeft="@+id/tv_news_title"
+                android:layout_alignRight="@+id/tv_news_title"
+                android:layout_below="@+id/tv_news_title"
                 android:lines="3"
                 android:textColor="@color/colorPrimaryDark"
                 android:ellipsize="end"
                 android:text="Jazz"/>
 
-            <ImageView
-                android:id="@+id/img_starred"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/img_star_selectable"
-                android:layout_alignParentRight="true"
-                android:padding="10dp"
-                android:tint="@color/purple"/>
 
             <TextView
-                android:id="@+id/tv_address"
+                android:id="@+id/tv_news_date"
                 style="@style/TextBase"
-                android:layout_alignLeft="@+id/tv_entity_name"
-                android:layout_below="@+id/tv_entity_category"
-                android:layout_toLeftOf="@+id/tv_event_time"
-                android:lines="2"
+                android:layout_alignLeft="@+id/tv_news_title"
+                android:layout_below="@+id/tv_news_summary"
+                android:layout_alignParentRight="true"
+                android:lines="1"
                 android:ellipsize="end"
                 android:gravity="bottom"
                 android:text="Pza Palacio"/>
