--- a/app/src/main/res/values/mocks.xml
+++ b/app/src/main/res/values/mocks.xml
@@ -6,5 +6,8 @@
         <item>Pepita</item>
         <item>Manolo</item>
         <item>Fulgencio</item>
+        <item>Paco</item>
+        <item>Paula</item>
+        <item>Pablo</item>
     </string-array>
 </resources>
