--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,4 +1,12 @@
 <resources>
 
 
+    <style name="ButtonMes">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:background">@drawable/bg_button_purple</item>
+        <item name="android:textColor">@color/green</item>
+        <item name="android:padding">10dp</item>
+        <item name="android:textAllCaps">true</item>
+    </style>
 </resources>
