--- a/app/src/main/res/layout/row_entity.xml
+++ b/app/src/main/res/layout/row_entity.xml
@@ -45,7 +45,7 @@
                 android:layout_alignLeft="@+id/tv_entity_name"
                 android:layout_alignRight="@+id/tv_entity_name"
                 android:layout_below="@+id/tv_entity_name"
-                android:lines="3"
+                android:maxLines="3"
                 android:textColor="@color/colorPrimaryDark"
                 android:ellipsize="end"
                 android:text="Jazz"/>
