- Login and register screens - Intro screens modified

--- a/app/src/main/res/drawable/bg_frame_black.xml
+++ b/app/src/main/res/drawable/bg_frame_black.xml
@@ -4,6 +4,6 @@
         android:width="1dp"
         android:color="@android:color/black"/>
     <solid 
-        android:color="@android:color/white"/>
+        android:color="@android:color/transparent"/>
 
 </shape>
