--- a/app/src/main/res/layout/fragment_novelties.xml
+++ b/app/src/main/res/layout/fragment_novelties.xml
@@ -10,13 +10,14 @@
         android:gravity="center_horizontal"
         android:text="NOTICIAS"
         android:layout_gravity="center"
-        android:textSize="30sp"/>
+        android:textSize="30sp"
+        android:visibility="gone"/>
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/recycler_entities"
+        android:id="@+id/recycler_novelties"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="10dp"
-        android:visibility="gone"/>
+        android:visibility="visible"/>
 
 </LinearLayout>
