--- a/app/src/main/res/layout/fragment_wallet.xml
+++ b/app/src/main/res/layout/fragment_wallet.xml
@@ -18,6 +18,7 @@
 
 
             <TextView
+                android:id="@+id/tv_balance"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="20dp"
@@ -33,14 +34,16 @@
 
 
             <android.support.v7.widget.AppCompatButton
-                android:layout_width="wrap_content"
+                android:id="@+id/btn_new_payment"
+                android:layout_width="250dp"
                 android:layout_height="wrap_content"
                 android:padding="20dp"
                 android:text="PAGAR"
                 android:textSize="22sp" />
 
             <android.support.v7.widget.AppCompatButton
-                android:layout_width="wrap_content"
+                android:id="@+id/btn_get_boniatos"
+                android:layout_width="250dp"
                 android:layout_height="wrap_content"
                 android:layout_margin="15dp"
                 android:padding="20dp"
@@ -48,7 +51,8 @@
                 android:textSize="22sp" />
 
             <android.support.v7.widget.AppCompatButton
-                android:layout_width="wrap_content"
+                android:id="@+id/btn_transactions"
+                android:layout_width="250dp"
                 android:layout_height="wrap_content"
                 android:padding="20dp"
                 android:text="Movimientos"
