--- a/app/src/main/res/layout/row_novelty.xml
+++ b/app/src/main/res/layout/row_novelty.xml
@@ -18,7 +18,7 @@
 
 
             <ImageView
-                android:id="@+id/img_news"
+                android:id="@+id/img_novelty"
                 android:layout_width="80dp"
                 android:layout_height="80dp"
                 android:scaleType="centerCrop"
@@ -29,10 +29,10 @@
                 android:alpha="1"/>
 
             <TextView
-                android:id="@+id/tv_news_title"
+                android:id="@+id/tv_novelty_title"
                 style="@style/TextBase"
                 android:textColor="#000"
-                android:layout_toRightOf="@+id/img_news"
+                android:layout_toRightOf="@+id/img_novelty"
                 android:layout_toLeftOf="@+id/img_starred"
                 android:textSize="22sp"
                 android:maxLines="1"
@@ -40,22 +40,21 @@
                 android:layout_marginRight="5dp"/>
 
             <TextView
-                android:id="@+id/tv_news_summary"
+                android:id="@+id/tv_novelty_text_short"
                 style="@style/TextBase"
-                android:layout_alignLeft="@+id/tv_news_title"
-                android:layout_alignRight="@+id/tv_news_title"
-                android:layout_below="@+id/tv_news_title"
-                android:lines="3"
+                android:layout_alignLeft="@+id/tv_novelty_title"
+                android:layout_below="@+id/tv_novelty_title"
+                android:lines="2"
                 android:textColor="@color/colorPrimaryDark"
                 android:ellipsize="end"
                 android:text="Jazz"/>
 
 
             <TextView
-                android:id="@+id/tv_news_date"
+                android:id="@+id/tv_novelty_date"
                 style="@style/TextBase"
-                android:layout_alignLeft="@+id/tv_news_title"
-                android:layout_below="@+id/tv_news_summary"
+                android:layout_alignLeft="@+id/tv_novelty_title"
+                android:layout_below="@+id/tv_novelty_text_short"
                 android:layout_alignParentRight="true"
                 android:lines="1"
                 android:ellipsize="end"
