--- a/app/src/main/res/values/mocks.xml
+++ b/app/src/main/res/values/mocks.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string-array name="receivers">
+    <string-array name="recipients">
         <item>Juanita</item>
         <item>Pepita</item>
         <item>Manolo</item>
