--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -30,7 +30,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center_horizontal"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:layout_marginTop="20dp">
 
                 <LinearLayout
                     android:id="@+id/btn_register_person"
@@ -114,15 +115,10 @@
                 android:background="@drawable/bg_button_purple"
                 android:gravity="center"
                 android:padding="10dp"
-                android:text="@string/enter"
+                android:text="@string/register"
                 android:textColor="@color/green"
                 android:textSize="20sp" />
 
-            <TextView
-                style="@style/TextBase"
-                android:layout_gravity="right"
-                android:layout_marginTop="30dp"
-                android:text="@string/remember_password" />
 
         </LinearLayout>
     </ScrollView>
