--- a/app/src/main/res/menu/navigation_bottom.xml
+++ b/app/src/main/res/menu/navigation_bottom.xml
@@ -3,17 +3,17 @@
 
     <item
         android:id="@+id/navigation_entities"
-        android:icon="@drawable/ic_home_black_24dp"
+        android:icon="@mipmap/ic_entities"
         android:title="@string/entities" />
 
     <item
         android:id="@+id/navigation_wallet"
-        android:icon="@drawable/ic_dashboard_black_24dp"
+        android:icon="@mipmap/ic_wallet"
         android:title="@string/wallet" />
 
     <item
         android:id="@+id/navigation_profile"
-        android:icon="@mipmap/ic_news"
+        android:icon="@mipmap/ic_novelties"
         android:title="@string/news" />
 
 </menu>
