--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,12 +6,17 @@
 
     <color name="text">#000</color>
 
-    <color name="green">#99BB14</color>
+    <color name="green">#A7CE05</color>
     <color name="green_dark">#829f0f</color>
-    <color name="green_light">#D6E4A1</color>
-    <color name="purple">#5A366C</color>
+    <color name="green_light">#C6E504</color>
+    <color name="purple">#912991</color>
     <color name="purple_light">#B7A0BF</color>
     <color name="purple_dark">#432850</color>
     <color name="black">#000</color>
+
+    <color name="green_gradient_dark">#C6E504</color>
+    <color name="green_gradient_light">#EBF49D</color>
+    <color name="transblack_entities">#9000</color>
+    <color name="white">#FFF</color>
 
 </resources>
